[package]
name = "noodel"
version = "0.1.0"
authors = ["djxc <dj_jxc@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
lazy_static = "1.4.0"
image = "0.24"
vulkano = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.3"
vulkano-shaders = "0.33.0"

[profile.dev]
opt-level = 1 

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
